base/production/excalidash-frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: excalidash-frontend
  namespace: production
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: excalidash-frontend
  template:
    metadata:
      labels:
        app: excalidash-frontend
        version: "N/A"
    spec:
      containers:
        - name: excalidash-frontend
          image: zimengxiong/excalidash-frontend
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 20
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 5
          resources:
            requests:
              cpu: 5m
              memory: 32Mi
            limits:
              cpu: 200m
              memory: 128Mi
