base/production/excalidash-frontend/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: excalidash-frontend-web
  namespace: production
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`draw.tahmid.io`) && PathPrefix(`/`)
      kind: Rule
      middlewares:
        - name: redirect-to-https
      services:
        - name: excalidash-frontend
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: excalidash-frontend-websecure
  namespace: production
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`draw.tahmid.io`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: excalidash-frontend
          port: 80
  tls:
    secretName: production-excalidash-frontend-tls
